--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
+    /*overflow: hidden;
+    height: 100vh;*/
+    display: flex;
+    flex-direction: column;
     }
 
 button {
@@ -87,23 +91,26 @@ a {
 
 .container img{
     width: 100px;
-    height: 100px;
+    
    }
 
 .info img {
     width: 100%;
     height: 100%;
+    
     }
 
 .item {
     max-width: 150px;
     max-height: 150px;
+    flex-shrink: 0;
     
 }
 
 .item img {
     border: 3px solid #3882f6;
     border-radius: 5px;
+    object-fit: cover;
     
 }
 
@@ -115,16 +122,76 @@ a {
     gap: 52px;
     margin-bottom: 52px;
     
+    
 }
 
 .info {
     text-align: center;
     padding: 52px;
+       
+}
+
+.quote {
+    background-color: #e5e7eb;
+    padding: 112px ;
+    display: flex;
+    justify-content: center;
     
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+    
+}
+
+.quote .text {
+    max-width: 800px; 
+       
+}
+
+.quote .container {
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    max-width: 900px;
+}
+
+.quote .credit {
+    text-align: right;
+    font-weight: bold;
+    font-style: normal;
+}
+
+.call {
+    background-color: #3882f6;
+    color: #e5e7eb;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /*gap: 128px;*/
+    padding: 52px 112px;
+    margin: 112px auto;
+    border-radius: 5px;
+    width: 700px;
 }
 
 
 
+.call .title {
+    font-size: 24px;
+    font-weight: bold;
+}
 
+.call button {
+    border: 3px solid #f9faf8;
+}
+
+.footer {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px;
+}
 
 
